[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "theseus"
description = "Beautiful compiler error messages. This is a Python wrapper for Rust's Ariadne lib."
authors = [
    { name = "Fábio Macêdo Mendes", email = "fabiomacedomendes@gmail.com" },
]
urls = { Repository = "http://github.com/fabiomacedomendes/theseus" }
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["pytest>=8.3.5"]
